--- a/src/styles/categories.css
+++ b/src/styles/categories.css
@@ -1,12 +1,15 @@
 ul{
     list-style: none;
     display: inline-flex;
-    justify-content: space-around;
     width: 100vw;
+    padding: 0;
+    overflow: auto;
+    white-space: nowrap;
 }
 
 li{
     color: #6f788a;
+    padding: 0 1em;
 }
 
 a{
@@ -19,4 +22,13 @@ a:hover{
     font-weight: 600;
     color:black;
     border-bottom: 3px solid black;
+}
+
+@media only screen and (max-width: 767px){
+
+}
+@media only screen and (min-width: 768px) {
+    ul{
+        justify-content: space-around;
+    }
 }
