--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -14,3 +14,13 @@ header{
 h1{
     margin-left:1em;
 }
+@media only screen and (max-width: 767px){
+    h1{
+        font-size: 1.05em;
+    }
+}
+@media only screen and (min-width: 768px) and (max-width:1024px){
+    h1{
+        font-size: 1.5em;
+    }
+}
