--- a/src/App.css
+++ b/src/App.css
@@ -3,37 +3,30 @@
   font-size: 16px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+header{
+  background-color: white;
+  box-shadow: 0px 4px 16px 0 rgba(196, 204, 221, .5);
+  position: fixed;
+  top: 0;
+  z-index: 2;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+.Nav{
+  width:100%;
+  display:inline-flex;
+  padding: .5em;
+}
+
+h1{
+  margin-left:1em;
+}
+@media only screen and (max-width: 767px){
+  h1{
+      font-size: 1.05em;
   }
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media only screen and (min-width: 768px) and (max-width:1024px){
+  h1{
+      font-size: 1.5em;
   }
 }
